frontend/src/css/main.css
#main-panel {
     position: absolute;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
}

#self-info {

}

#search-bar {
    background-color: #EEFAF9;
}

#chat-list-panel {
    height: 480px;
    overflow: auto;
}

#object-info {

}

#chatting-panel {
    background-color: #F5F7FA;
}

#text-panel {
    background-color: #FBFDFF;
    margin-top: 20px;
}

#add {
    margin-top: 10px;
    text-align: center;
    font-size: 40px;
    color: #F0F0F0;
}

#add:hover {
    color: #FFFFFF;
    cursor: pointer;
}

.chat {
    height: 50px;
    background-color: #ABE8E0;
    margin-top: 2px;
    padding-top: 10px;
    padding-bottom: 10px;
}

.chat:hover {
    background-color: #97E2D8;
}

.chat .avatar {
    width: 40px;
    height: 40px;
    border-radius: 20px;
    margin: 5px 12px;
}

.chat .name {
    font-weight: 600;
}

.chat .last-chat-time {
    text-align: right;
}

.chat .last-chat-content {
    line-height: 30px;
}

.avatar {
    width: 50px;
    height: 50px;
    border-radius: 25px;
}

.el-header {
    background-color: #2EC5B1;
    text-align: left;
    line-height: 60px;
}

.el-footer {
    background-color: #F4F4F5;
}

.el-aside {
    background-color: #ABE8E0;
}

.el-main {
    background-color: #EEFAF9;
}

.el-container {
    height: 600px;
    width: 1300px;
    margin-bottom: 40px;
}

#mask {
    position: absolute;
        top: 0px;
        left: 0px;
        width: 100%;
        height: 100%;
        background-color: #000000;
        opacity: 0.5;
}

#searchUserPanel {
    border-radius: 10px;
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    width: 800px;
    height: 500px;
    background-color: #FFFFFF;
}

#searchResults {
    border-radius: 5px;
    overflow: auto;
    margin-top: 20px;
    margin-left: 50px;
    padding: 10px 10px;
    width: 700px;
    height: 300px;
    background-color: #F2F8FE;
}

.single-user-info {
    border-radius: 10px;
    margin-top: 5px;
    height: 60px;
    padding-top: 30px;
    text-align: center;
}

.single-user-info:hover {
    background: #D5F3EF;
    cursor: pointer;
}

